# MacroRecorder

./: .gitignore  README.md  macro_gui.py  macro_recorder.py  main.py  pyproject.toml  recorded_keys.json
macrorecorder/: __init__.py  __main__.py  macro_gui.py
macrorecorder/core/: __init__.py  config.py  recorder.py  storage.py
macrorecorder/gui/: __init__.py  application.py
