[project]
name = "macrorecorder"
version = "1.0.0"
description = "Simple macro recorder for keystrokes on X and Wayland"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycairo>=1.28.0",
    "pygobject>=3.52.3",
    "pynput>=1.8.1",
]

[project.scripts]
macrorecorder = "macrorecorder.macro_gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["macrorecorder"]

[tool.hatch.build]
sources = ["."]