[project]
name = "linux_macrorecorder"
version = "1.0.2"
description = "Simple macro recorder for keystrokes on X and Wayland"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycairo>=1.28.0",
    "pygobject>=3.52.3",
    "pynput>=1.8.1",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["macro", "recorder", "keystrokes", "automation"]

[project.scripts]
macrorecorder = "macrorecorder.gui.application:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["macrorecorder"]

[tool.hatch.build]
sources = ["."]

[project.urls]
Homepage = "https://github.com/werzum/MacroRecorder"
